2025-07-09T00:57:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16157723845 # 699
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-09
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 860 1338 / 873 1351
* notice: next accum: outdated-unq outdated-all / unq all: 861 1339 / 874 1352
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-25] / [2025-07-08]

2025-07-08T00:56:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16131283559 # 698
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-08
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 860 1338 / 872 1350
* notice: next accum: outdated-unq outdated-all / unq all: 860 1338 / 873 1351
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-07]

2025-07-07T01:00:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16105168041 # 697
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-07
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 859 1337 / 871 1349
* notice: next accum: outdated-unq outdated-all / unq all: 860 1338 / 872 1350
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-23] / [2025-07-06]

2025-07-06T01:01:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16093743264 # 696