@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-09T00:57:35Z",
-  "count_outdated" : 1339,
-  "uniques_outdated" : 861,
-  "count" : 1352,
-  "uniques" : 874,
+  "timestamp" : "2025-07-10T00:57:12Z",
+  "count_outdated" : 1340,
+  "uniques_outdated" : 862,
+  "count" : 1353,
+  "uniques" : 875,
   "clones" : [
-    {
-      "timestamp": "2025-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-27T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-07-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
