@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-06-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-06-27T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2025-07-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
